Huge refactor. Moved zsh into it's own role. Add zsh_c variable for path to custom zsh config. Use vanilla .zshrc file. Create tmux.d and vimrc.d ahead of time so that subsequent roles won't have to. Add tmux and tmuxinator plugins to zsh. Add vi-mode and 'jj' to escape. Add zsh_reload plugin ```src``` command.
Note: I had to do a PR on oh-my-zsh so that we could load plugins from custom zsh config. When that gets merged we need to change back to using the main repo.

--- a/roles/tmux/tasks/main.yml
+++ b/roles/tmux/tasks/main.yml
@@ -14,6 +14,11 @@
 - copy: src=tmux.conf dest=~/.tmux.conf
 - file: path={{ tmux_d }} state=directory
 
+- name: add custom tmux config to zsh
+  copy: src=tmux.zsh dest={{ zsh_c }}
+  notify: reload zsh
+  when: "'zsh' in role_names"
+
 - name: ensure ~/Library/Fonts exists
   file: path=~/Library/Fonts state=directory
 
