--- a/roles/common/tasks/directories.yml
+++ b/roles/common/tasks/directories.yml
@@ -1,6 +1,6 @@
 ---
-- file: path={{ tmux_d }} state=directory
-  when: "'tmux' in role_names"
-
-- file: path={{ vimrc_d }} state=directory
-  when: "'vim' in role_names"
+- name: ensure *.d directories exist
+  file: path={{ item }} state=directory
+  with_items:
+    - "{{ tmux_d }}"
+    - "{{ vimrc_d }}"
