--- a/roles/shell/tasks/main.yml
+++ b/roles/shell/tasks/main.yml
@@ -17,8 +17,9 @@
 - copy:
     src: aliases
     dest: ~/.aliases.d
+
+  # TODO: convert this to a proper aliases.d structure with a *.zsh include file
 - lineinfile: dest=~/.zshrc line="[[ -f ~/.aliases.d/aliases ]] && source ~/.aliases.d/aliases"
 
 - name: add custom shell config to zsh
   copy: src=shell.zsh dest={{ zsh_c }}
-  when: "'zsh' in role_names"
