--- a/roles/ruby/tasks/main.yml
+++ b/roles/ruby/tasks/main.yml
@@ -1,24 +1,21 @@
 ---
-- name: copy .gemrc into $HOME
+- name: copy .gemrc into ~
   copy:
     src: gemrc
     dest: ~/.gemrc
 
-- name: ensure rbenv
-  homebrew: name=rbenv state=present
-- homebrew: name=ruby-build state=present
+- name: install/update ruby tooling
+  homebrew: name={{ item }} state=latest
+  with_items:
+    - rbenv
+    - rbenv-bundle-exec
+    - rbenv-default-gems
+    - rbenv-gem-rehash
+    - rbenv-vars
+    - ruby-build
 
-- name: ensure ~/.rbenv dir
+- name: ensure ~/.rbenv directory exists
   file: path=~/.rbenv state=directory
 
-- name: ensure rbenv ~/.zshrc config
-  lineinfile:
-    dest: ~/.zshrc
-    line: if which rbenv > /dev/null; then eval "$(rbenv init -)"; fi
-    state: present
-
-- name: ensure a few rbenv plugins
-  homebrew: name=rbenv-default-gems state=present
-- homebrew: name=rbenv-gem-rehash state=present
-- homebrew: name=rbenv-vars state=present
-- homebrew: name=rbenv-bundle-exec state=present
+- name: add ruby configuration to zsh
+  copy: src=ruby.zsh dest={{ zshrc_d }}
