--- a/roles/postgresql/tasks/main.yml
+++ b/roles/postgresql/tasks/main.yml
@@ -1,10 +1,12 @@
 ---
-- name: ensure postgresql is installed
-  homebrew: name=postgresql state=present
+- name: install/update postgresql
+  homebrew: name=postgresql state=latest
 
-- file: path=~/Library/LaunchAgents state=directory
+- name: ensure ~/Library/LaunchAgents directory exists
+  file: path=~/Library/LaunchAgents state=directory
 
-- file:
+- name: ensure postgresql launch agent is installed
+  file:
   args:
     src: /usr/local/opt/postgresql/homebrew.mxcl.postgresql.plist
     path: ~/Library/LaunchAgents/homebrew.mxcl.postgresql.plist
