--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,11 @@ script:
 - bash install.sh --skip-short-stack
 - ansible-playbook ~/.short-stack/stack.yml -i ~/.short-stack/inventory --syntax-check
 - ansible-playbook ~/.short-stack/stack.yml -i ~/.short-stack/inventory
+- >
+  ansible-playbook ~/.short-stack/stack.yml -i ~/.short-stack/inventory
+  | grep -q 'changed=0.*failed=0'
+  && (echo 'Idempotence test: pass' && exit 0)
+  || (echo 'Idempotence test: fail' && exit 1)
 
 notifications:
   slack:
