--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,9 @@ install:
 
 script:
 - bash install.sh --skip-short-stack
-- ansible-playbook ~/.short-stack/stack.yml -i ~/.short-stack/inventory --syntax-check
-- ansible-playbook ~/.short-stack/stack.yml -i ~/.short-stack/inventory
+- short-stack
 - >
-  ansible-playbook ~/.short-stack/stack.yml -i ~/.short-stack/inventory
+  short-stack
   | grep -q 'changed=0.*failed=0'
   && (echo 'Idempotence test: pass' && exit 0)
   || (echo 'Idempotence test: fail' && exit 1)
