Add additional short-stack run to see why it is failing idempotency check.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
 script:
 - bash install.sh --skip-short-stack
 - short-stack
+- short-stack
 - >
   short-stack
   | grep -q 'changed=0.*failed=0'
