split the aliases file into its own aliases nested under each task zsh file.

--- a/roles/osx/tasks/main.yml
+++ b/roles/osx/tasks/main.yml
@@ -71,3 +71,6 @@
 
 - name: set up iterm2 default config
   copy: src=com.googlecode.iterm2.plist dest=~/Library/Preferences/com.googlecode.iterm2.plist
+
+- name: add osx configuration to zsh
+  copy: src=osx.zsh dest={{ zshrc_d }}
