Add the global vars file back. Rename bootstrap to core. Rename shell to command-line-tools. Remove monaco for powerline font. Remove tmux theme file.

--- a/roles/command-line-tools/tasks/main.yml
+++ b/roles/command-line-tools/tasks/main.yml
@@ -6,10 +6,9 @@
     - chromedriver
     - ctags
     - hub
-    - irssi
     - reattach-to-user-namespace
     - the_silver_searcher
     - wget
 
 - name: add shell configuration to zsh
-  copy: src=shell.zsh dest={{ zshrc_d }}
+  copy: src=shell.zsh dest={{ stack_d }}
